Still working on EK9 signature generation from annotated Java code. more on generics to do.